Adjust pricing section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1000,8 +1000,8 @@ a:hover {
   .pricing img {
     max-width: 550px;
     height: auto;
-    position: absolute;
-    margin-top: 16px;
+    position: relative;
+    margin-top: -30px;
 
     /* margin-top: -30px; */
     z-index: 5;
@@ -1011,7 +1011,7 @@ a:hover {
 
     /* width: 100%;
     height: 200px; */
-    clip: rect(10px,550px,232px,0px);
+    /* clip: rect(10px,550px,232px,0px); */
   }
 
   .pricing .pricingSubContentColumn {
@@ -1081,6 +1081,8 @@ a:hover {
 
   .pricing .sectionTitleDiv {
     position: absolute;
+    margin-top: -50px;
+    margin-left: 20px;
   }
 
   .pricing .sectionSubTitle {
