--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1354,7 +1354,7 @@ a:hover {
     padding: 10px 12px;
   }
   
-  .contact .php-email-form button[type="submit"] {
+  /* .contact .php-email-form button[type="submit"] {
     background-color: #1a76d2;
     border: 3px solid #1a76d2;
     padding: 10px 34px;
@@ -1364,6 +1364,21 @@ a:hover {
   }
   
   .contact .php-email-form button[type="submit"]:hover {
+    background-color: #fff;
+    color: #1a76d2;
+    border: 3px solid #1a76d2;
+  } */
+
+  .contact #contactSubmit {
+    background-color: #1a76d2;
+    border: 3px solid #1a76d2;
+    padding: 10px 34px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 3px;
+  }
+  
+  .contact #contactSubmit:hover {
     background-color: #fff;
     color: #1a76d2;
     border: 3px solid #1a76d2;
