--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -73,7 +73,7 @@
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
-  font-size: 10px;
+  font-size: 14px;
   /* font-size: 1vw; */
   color: #66757f;
 }
@@ -99,6 +99,10 @@
   transform: translateX(-50%);
   width: 28%;
   z-index: 2;
+}
+
+.services .gallery-item.gallery-item-selected h3 {
+  font-size: 22px;
 }
 
 .services .gallery-item.gallery-item-previous,
