--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,6 +682,7 @@ a:hover {
 
   .features p {
     text-align: center;
+    color: #66757f;
   }
 
   .features h4 {
@@ -808,7 +809,7 @@ a:hover {
   .globe p {
     color: #66757f;
     text-align: center;
-    font-size: 1vw;
+    /* font-size: 1vw; */
   }
 
   .globe #globeSection {
@@ -991,14 +992,14 @@ a:hover {
   }
 
   .pricing .pricingContentRow {
-    height: 230px; 
+    height: 215px; 
     width: 100%; 
     /* background-color: teal; */
     /* background: url(../../assets/img/pricing/pricingRowBackground.png) no-repeat center center; */
   }
 
   .pricing img {
-    max-width: 550px;
+    max-width: 500px;
     height: auto;
     /* position: relative; */
     margin-top: -16px;
@@ -1016,7 +1017,7 @@ a:hover {
     justify-content: center;
     /* height: 100%; */
 
-    margin-top: -70px;
+    margin-top: -30px;
   }
 
   .pricing .pricingSubContentColumn1 {
@@ -1048,6 +1049,7 @@ a:hover {
     transition: 0.4s;
     border-radius: 24px;
     font-size: 14px;
+    font-weight: bold;
     color: #fff;
   }
 
@@ -1063,13 +1065,6 @@ a:hover {
     background: -webkit-linear-gradient(#696969, #b4ac9c 50% , #384456 55%, #696969 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  }
-
-  .pricing .pricingContentTitle{
-    font-size: 30px;
-  }
-
-  .pricing .pricingContentSubTitle {
     font-size: 30px;
   }
 
@@ -1095,7 +1090,7 @@ a:hover {
 
     .pricing .pricingContentRow {
       height: 400px; 
-      width: 100%; 
+      width: 100%;
     }
 
     .pricing .pricingSubContentColumn {
