Adjust header scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,7 +285,7 @@ a:hover {
     #header .logo {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       width: 95%;
       height: 80px;
